--- a/app/src/main/res/layout/activity_koloro.xml
+++ b/app/src/main/res/layout/activity_koloro.xml
@@ -16,19 +16,22 @@
       android:layout_height="match_parent"
       >
 
-    <FrameLayout
-        android:id="@+id/ad_placeholder"
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorAccent"
-        />
+        app:adSize="BANNER"
+        app:adUnitId="@string/banner_ad_unit_id_test">
+    </com.google.android.gms.ads.AdView>
+
 
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/ad_placeholder">
+        android:layout_above="@id/adView">
 
       <LinearLayout
           android:layout_width="match_parent"
